--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @media (max-width: 400px) {
     .container {
       padding: 10px;  
-      max-width: 100%;  
+      max-width: 100vw;  
     }
   
     h1 {
