--- a/src/components/TaskBoard.css
+++ b/src/components/TaskBoard.css
@@ -19,6 +19,7 @@
       margin: 0 auto;              /* ממרכז את האלמנט */
       padding: 1em;               /* ריווח פנימי לנראות טובה יותר */
       box-sizing: border-box;      /* מוודא שה-padding נכלל בתוך הרוחב */
+      overflow-x: scroll;
     }
   }
   
