--- a/src/components/TaskBoard.css
+++ b/src/components/TaskBoard.css
@@ -1,3 +1,14 @@
+.fade-in {
+  opacity: 1;
+  transition: opacity 0.5s ease-in;
+}
+
+.fade-out {
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
+
 @media (max-width: 400px) {
     .row {
       display: flex;
